# ir-assert

./: Cargo.toml  README.md
.github/workflows/: test.yml
macro/: Cargo.toml  lib.rs
src/: build.rs  env.rs  ir.rs  lib.rs
src/predicate/: combinators.rs  debug.rs  dsl.rs  mod.rs  no_panic.rs
tests/: basic.rs  block_level.rs  closures.rs  debug_assert_ir.rs  env_predicates.rs  exact_counts.rs  multiblock.rs  no_panic.rs  optimization.rs  return_value.rs  ui.rs
tests/ui/: closure_missing_arg_type.rs  closure_missing_arg_type.stderr  closure_missing_arg_types_multi.rs  closure_missing_arg_types_multi.stderr  generic_fn_missing_type_params.rs  generic_fn_missing_type_params.stderr
tests/ui_no_debug/: debug_assert_ir_multi.rs  debug_assert_ir_multi.stderr
