[package]
name = "ir-assert-macro"
description = "in-test assertion over its compiled llvm-ir"
version = "0.1.1"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
edition = "2021"
repository = "https://github.com/yasuo-ozu/ir-assert"
keywords = ["macros", "debugging", "testing", "llvm", "llvm-ir"]
categories = ["development-tools::debugging", "development-tools::testing"]
license = "MIT"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0"
proc-macro-error2 = "2.0"
template-quote = "0.4"

[dependencies.syn]
version = "2.0"
features = ["full", "derive", "printing", "extra-traits"]
